--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,6 +37,7 @@ time, mark, audio, video {
     --transparent-red: rgba(255, 140, 140, 0.719);
     --transparent-white: rgba(255, 255, 255, 0.777);
 
+    --minimal-box-shadow: rgba(0, 0, 0, 0.685);
     --form-bg: rgba(255, 255, 255, 0.841);
     --project-card-bg: rgba(255, 255, 255, 0.849);
     --stack-tags-bg: #d3ffbef0;
