--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,4 +1,4 @@
-.projects-section-label {
+.projects-section-heading {
     padding: 20px;
     padding-bottom: 5px;
     border-radius: 20px;
@@ -11,6 +11,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.projects-section-heading.minimal {
+    border-radius: 0;
+    box-shadow: 3px 3px 0 var(--minimal-box-shadow);
 }
 
 .stack-tags {
